# OfficeTool2.0

./: .env.example  .gitignore  Agents.md  CHANGELOG.md  README.md  package-lock.json  test_full_flow.py  test_login.py
app/: .env.example  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  officetool_dev.db  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 001_initial_schema.py  002_add_audit_logs.py  003_add_qa_count.py
app/api/: admin.py  auth.py  deps.py  document.py  graph.py  knowledge_base.py  qa.py  search.py  tag.py  users.py
app/core/: audit.py  config.py  database.py  exceptions.py  rate_limit.py  response.py  security.py
app/engine/kg/: __init__.py  extractor.py  neo4j_store.py  prompts.py  query.py  relation.py
app/engine/llm/: base.py  deepseek.py  factory.py  tongyi.py
app/engine/parser/: __init__.py  base.py  csv_json.py  docx.py  html_xml.py  layout.py  ocr.py  (+5 more)
app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
app/models/: audit_log.py  models.py
app/schemas/: schemas.py
app/scripts/: e2e_mvp_test.sh  e2e_phase2_test.sh
app/services/: document_service.py  encryption.py  graph_service.py  parse_cache.py  qa_cache.py  qa_service.py  storage.py
app/tasks/: celery_app.py  embed.py  kg_build.py  parse.py
app/tests/: conftest.py  test_api_auth.py  test_embedder_fallback.py  test_parser_registry.py  test_qa_retrieve.py  test_response.py  test_security.py  test_task_async_runner.py
app/uploads/: 6b48f57f82224490ab7505306776a872_1c9d7e75a87a40bb88e8b162c1e3dde7_e2e_test.md
(+159 files in other folders)
